Revert "fixing the path space issue CARBON-14806"
This reverts commit f16022126f97ddc4896f792873541d88175a5f3f.