@@ -19,10 +19,8 @@
 package org.wso2.carbon.launcher.utils;
 
 import java.io.File;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URLDecoder;
 
 public class FileResolver {
 
@@ -40,27 +38,23 @@ public class FileResolver {
         }
 
         String relativeFilePath = path;
-        if (path.startsWith("file:")) {
+        if(path.startsWith("file:")){
             relativeFilePath = path.substring(5);
         }
 
         File file = new File(relativeFilePath);
         if (file.isAbsolute()) {
             try {
-                String urlString = file.toURI().toURL().toString();
-                URL url = new URL(URLDecoder.decode(urlString, "UTF-8"));
-                return url;
-            } catch (MalformedURLException | UnsupportedEncodingException e) {
+                return file.toURI().toURL();
+            } catch (MalformedURLException e) {
                 throw new RuntimeException(e.getMessage(), e);
             }
         } else {
             file = new File(parentPath, relativeFilePath);
             if (file.isAbsolute()) {
                 try {
-                    String urlString = file.toURI().toURL().toString();
-                    URL url = new URL(URLDecoder.decode(urlString, "UTF-8"));
-                    return url;
-                } catch (MalformedURLException | UnsupportedEncodingException e) {
+                    return file.toURI().toURL();
+                } catch (MalformedURLException e) {
                     throw new RuntimeException(e.getMessage(), e);
                 }
             }
